# bitc

./: .gitignore  .hgignore  README.md
src/: Makefile  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  install-sh  mkinstalldirs
src/aclocal/: ax_boost_base.m4  check_lib64.m4  check_libgc.m4  check_libicuuc.m4  check_osdoc.m4  prog_bison_version.m4
src/bitcc-bootstrap/: Makefile
src/bitcc-bootstrap/emacs/: bitc.el
src/bitcc-bootstrap/frontend/: AST.ast  AST.cxx  AST.hxx  ASTaux.cxx  ASTimpl.cxx  BeginSimp.cxx  BitC-pp.cxx  BitcParser.y  Clconv.cxx  Clconv.hxx  Constraints.cxx  DefreprXform.cxx  EqUnify.cxx  FQName.hxx  INOstream.hxx  Instantiate.cxx  LocChk.cxx  Makefile  Options.hxx  Overview.doxy  Pair.hxx  SSA.cxx  SexprLexer.cxx  Simplify.cxx  Solver.cxx  Special.hxx  Symtab.cxx  Symtab.hxx  TODO.txt  Tail.cxx  TopInit.cxx  Trail.cxx  Trail.hxx  TvPrinter.cxx  Type-debug-pp.cxx  Type-mangle.cxx  Type-pp.cxx  Type-size.cxx  Type-to-ast.cxx  Type-xml.cxx  (+37 more)
src/bitcc-bootstrap/libbitc/: Makefile  stdio.c  stdlib.c  string.c
src/bitcc-bootstrap/runtime/: Makefile  gen.cxx  genops.sh
src/bitcc-bootstrap/tests/: testit.sh
src/compiler/: AST.ast  AST.cxx  AST.hxx  ASTaux.cxx  ASTimpl.cxx  BeginSimp.cxx  BitC-pp.cxx  BitcParser.y  BlockLexer.cxx  BlockLexer.hxx  BlockParser.y  BoostCompat.cxx  BoostCompat.hxx  Clconv.cxx  Constraints.cxx  DefreprCheck.cxx  DefreprXform.cxx  DoneList.hxx  Eliminate.hxx  Environment.cxx  Environment.hxx  FQName.cxx  FQName.hxx  FileUtil.cxx  FileUtil.hxx  INOstream.hxx  InitializerRules.doxy  InstLamHoist.cxx  Instantiate.cxx  Instantiate.hxx  LayoutProcessing.doxy  LitValue.cxx  LitValue.hxx  LocChk.cxx  MainPage.doxy  Makefile  Makefile.in  MethDecl.cxx  Methods.doxy  MixFix.cxx  (+76 more)
src/compiler/frontend/: AST.ast  AST.cxx  AST.hxx  ASTimpl.cxx  BeginSimp.cxx  BitC-pp.cxx  BitcParser.y  Clconv.cxx  Constraints.cxx  DefreprCheck.cxx  DefreprXform.cxx  Environment.hxx  FQName.cxx  InstLamHoist.cxx  Instantiate.cxx  LocChk.cxx  Makefile  NoAllocCheck.cxx  NoGcCheck.cxx  Options.hxx  ParseType.hxx  SSA.cxx  SexprLexer.cxx  SexprLexer.hxx  Solver.cxx  Symtab.cxx  TODO.txt  Tail.cxx  TopInit.cxx  Trail.cxx  TvPrinter.hxx  Type.cxx  Type.hxx  TypeInfer.cxx  TypeInferUtil.cxx  TypeInferUtil.hxx  TypeMut.hxx  TypePoly.cxx  TypeScheme.hxx  TypeValRes.cxx  (+14 more)
src/compiler/libsherpa/: BigNum.cxx  BigNum.hxx  CVector.hxx  EnumSet.hxx  GCPtr.cxx  GCPtr.hxx  INOstream.hxx  LToken.cxx  LToken.hxx  LexLoc.cxx  LexLoc.hxx  Path.cxx  Path.hxx  UExcept.cxx  UExcept.hxx  avl.cxx  avl.hxx  format.cxx  format.hxx  utf8.cxx  utf8.hxx  util.cxx  util.hxx
src/compiler/sherpa/: BigNum.cxx  CVector.hxx  GCPtr.cxx  GCPtr.hxx  LToken.cxx  LToken.hxx  LexLoc.cxx  LexLoc.hxx  Path.cxx  Path.hxx  UExcept.cxx  avl.cxx  avl.hxx  format.cxx  format.hxx  utf8.hxx  util.hxx
src/compiler/stale/: AlphaRename.cxx  BitcLexer.hxx  Clconv.cxx  Hoist.cxx  TypeChoice.cxx  c-gen.cxx
src/doc/: Makefile  bitc.xhtml  docs.ohtml  history.xhtml  makepng.sh  navstyles.css  people.ohtml  sidenav.html  sitefooter.html  siteheader.html  styles.css  topnav.html
src/emacs/: Makefile  bitc.el
src/libbitc/: MainPage.doxy  Makefile  Makefile.in  bitc-runtime.bitc  bitc-runtime.bitc.sexpr  doxygen.html.cfg  nogc-allocator.c  stdio.c  stdlib.c  string.c
src/man/: Makefile  Makefile.in  bitcc.1.man
src/runtime/: Makefile
src/tests/: Makefile  Makefile.in  compileit.sh  testit.sh
(+744 files in other folders)
